# Program-Analyzer

./: README.md
Code21/: CMakeLists.txt  Contact.csv  Readme.txt
Code21/src/integration_testing/: CMakeLists.txt
Code21/src/integration_testing/src/: TestCFGBipHandler.cpp  TestCFGHandler.cpp  TestDesignExtractorExtensions.cpp  TestDesignExtractorMultipleProcedures.cpp  TestDesignExtractorSingleProcedure.cpp  TestGEHandler.cpp  TestQueryEvaluatorPKB.cpp  TestQueryProcessor.cpp
Code21/src/spa/: CMakeLists.txt
Code21/src/spa/src/: spa.cpp  spa.h
Code21/src/spa/src/design_extractor/: DesignExtractor.cpp  DesignExtractor.h
Code21/src/spa/src/design_extractor/graph_explosion/: GEHandler.cpp  GEHandler.h  GENode.cpp  GENode.h
Code21/src/spa/src/design_extractor/handler/: AffectsBipHandler.cpp  AffectsBipHandler.h  AffectsHandler.cpp  AffectsHandler.h  AssignmentHandler.cpp  AssignmentHandler.h  CallHandler.cpp  CallHandler.h  ConstantHandler.cpp  ConstantHandler.h  EntityHandler.cpp  EntityHandler.h  FollowsHandler.cpp  FollowsHandler.h  IfHandler.cpp  IfHandler.h  ModifiesHandler.cpp  ModifiesHandler.h  NextBipHandler.cpp  NextBipHandler.h  NextHandler.cpp  NextHandler.h  ParentHandler.cpp  ParentHandler.h  PrintHandler.cpp  PrintHandler.h  ProcedureHandler.cpp  ProcedureHandler.h  ReadHandler.cpp  ReadHandler.h  StatementHandler.cpp  StatementHandler.h  UsesHandler.cpp  UsesHandler.h  VariableHandler.cpp  VariableHandler.h  WhileHandler.cpp  WhileHandler.h
Code21/src/spa/src/design_extractor/utils/: CFGBipHandler.cpp  CFGBipHandler.h  CFGHandler.cpp  CFGHandler.h  DeUtils.cpp  DeUtils.h
Code21/src/spa/src/parser_utils/: ExpressionParser.cpp  ExpressionParser.h  ParserUtils.cpp  ParserUtils.h
Code21/src/spa/src/pkb/: PKB.cpp  PKB.h
Code21/src/spa/src/pkb/abstraction_tables/: AffectsBipTable.cpp  AffectsBipTable.h  AffectsTable.cpp  AffectsTable.h  CallsTable.cpp  CallsTable.h  FollowsTTable.cpp  FollowsTTable.h  FollowsTable.cpp  FollowsTable.h  ModifiesTable.cpp  ModifiesTable.h  NextBipTable.cpp  NextBipTable.h  NextTable.cpp  NextTable.h  ParentTTable.cpp  ParentTTable.h  ParentTable.cpp  ParentTable.h  UsesTable.cpp  UsesTable.h
Code21/src/spa/src/pkb/entity_tables/: AssignTable.cpp  AssignTable.h  ContainerTable.cpp  ContainerTable.h  EntityTable.cpp  EntityTable.h  ProcTable.cpp  ProcTable.h
Code21/src/spa/src/pkb/templates/: Table.cpp  Table.h  TableMultiple.cpp  TableMultiple.h  TableSingle.cpp  TableSingle.h
Code21/src/spa/src/query_processor/: QueryProcessor.cpp  QueryProcessor.h
Code21/src/spa/src/query_processor/commons/: BooleanSemanticError.h
Code21/src/spa/src/query_processor/commons/query/: Query.cpp  Query.h
Code21/src/spa/src/query_processor/commons/query/clause/: AttributeType.h  Clause.cpp  Clause.h  ClauseParam.h  ClauseType.h  DesignAbstraction.h  PatternClause.cpp  PatternClause.h  SuchThatClause.cpp  SuchThatClause.h  WithClause.cpp  WithClause.h
Code21/src/spa/src/query_processor/commons/query/entities/: DesignEntity.cpp  DesignEntity.h  DesignEntityType.h  SelectedEntity.h
Code21/src/spa/src/query_processor/commons/query_result/: QueryResult.cpp  QueryResult.h
Code21/src/spa/src/query_processor/query_evaluator/: QueryEvaluator.cpp  QueryEvaluator.h  ResultTable.cpp  ResultTable.h
Code21/src/spa/src/query_processor/query_evaluator/utils/: QueryEvaluatorUtils.cpp  QueryEvaluatorUtils.h
Code21/src/spa/src/query_processor/query_optimizer/: QueryOptimizer.cpp  QueryOptimizer.h
Code21/src/spa/src/query_processor/query_parser/: QueryParser.cpp  QueryParser.h
Code21/src/spa/src/query_processor/query_parser/utils/: QueryParserUtils.cpp  QueryParserUtils.h  QueryRegex.cpp  QueryRegex.h
Code21/src/spa/src/query_processor/query_projector/: QueryProjector.cpp  QueryProjector.h
Code21/src/spa/src/source_processor/: Lexer.cpp  Lexer.h  Parser.cpp  Parser.h
Code21/src/spa/src/source_processor/ast/: TNode.cpp  TNode.h  TNodeType.h
Code21/src/spa/src/source_processor/token/: Token.cpp  Token.h  TokenList.cpp  TokenList.h  TokenType.h
Code21/src/spa/src/source_processor/utils/: TypeUtils.cpp  TypeUtils.h
Code21/src/spa/src/utils/: Extension.cpp  Extension.h
Code21/src/test_utils/: CMakeLists.txt
Code21/src/test_utils/src/: BuildPKBUtils.cpp  BuildPKBUtils.h  PKBStub.cpp  PKBStub.h  TestUtils.cpp  TestUtils.h
Code21/src/unit_testing/: CMakeLists.txt
Code21/src/unit_testing/src/design_extractor/: TestDeUtils.cpp
Code21/src/unit_testing/src/parser_utils/: TestExpressionParser.cpp  TestParserUtils.cpp
Code21/src/unit_testing/src/pkb/: TestAffectsTable.cpp  TestAssignTable.cpp  TestCallsTable.cpp  TestEntityTable.cpp  TestFollowsTTable.cpp  TestFollowsTable.cpp  TestModifiesTable.cpp  TestNextTable.cpp  TestPKB.cpp  TestParentTTable.cpp  TestParentTable.cpp  TestProcTable.cpp  TestTableMultiple.cpp  TestTableSingle.cpp  TestUsesTable.cpp
Code21/src/unit_testing/src/query_processor/query/: TestQuery.cpp
Code21/src/unit_testing/src/query_processor/query/clause/: TestClause.cpp  TestDesignEntity.cpp  TestPatternClause.cpp  TestSuchThatClause.cpp  TestWithClause.cpp
Code21/src/unit_testing/src/query_processor/query_evaluator/: TestQueryEvaluatorEvaluateClause.cpp  TestQueryEvaluatorEvaluateQuery.cpp  TestResultTable.cpp
Code21/src/unit_testing/src/query_processor/query_evaluator/utils/: TestQueryEvaluatorUtils.cpp
Code21/src/unit_testing/src/query_processor/query_optimizer/: TestQueryOptimizer.cpp
Code21/src/unit_testing/src/query_processor/query_parser/: TestQueryParser.cpp  TestQueryParserAnd.cpp  TestQueryParserPattern.cpp  TestQueryParserSelect.cpp  TestQueryParserSuchThat.cpp  TestQueryParserWith.cpp
Code21/src/unit_testing/src/query_processor/query_parser/utils/: TestQueryParserUtils.cpp
Code21/src/unit_testing/src/query_processor/query_projector/: TestQueryProjector.cpp
Code21/src/unit_testing/src/source_processor/: TestLexer.cpp  TestParser.cpp  TestTNode.cpp  TestToken.cpp  TestTokenList.cpp  TestTypeUtils.cpp
Code21/src/unit_testing/src/time_complexity/: TestQueryParserBigO.cpp  commons.cpp
(+48 files in other folders)
